# AntiPaSTO

./: .gitignore  CITATION.cff  LICENSE  README.md  justfile  pyproject.toml
antipasto/: __init__.py  config.py  control.py  dataset.py  display.py  eval.py  extract.py  gen.py  metrics.py  transfer_analysis.py
antipasto/peft_utils/: adapter_scaling.py  antipasto_adapter.py  layer_selection.py  load.py  subspaces.py
antipasto/train/: daily_dilemas.py  data.py  inner_contrastive_loss.py  model_setup.py  train_adapter.py
nbs/: eval_baseline_prompting.py  eval_baseline_prompting_engineered.py  eval_baseline_repeng.py  talk_to_checkpoint.ipynb  talk_to_checkpoint.py  test_reload.py  train.py  train_a_model H3.ipynb
scripts/: upload_to_hf.py
tests/: test_train.py
